erDiagram
    %% ============ IDENTITY ============
    Users ||--o{ Patients : "1 user may be a patient"
    Users ||--o{ Doctors  : "1 user may be a doctor"
    Patients ||--o{ FamilyLinks : "patient has family links"
    Users ||--o{ FamilyLinks : "family user linked"

    Patients ||--o{ PatientIdentifiers : "structured IDs"
    Patients ||--o{ PatientInsurances  : "insurance policies"

    %% ============ VAULT ============
    Patients ||--o{ VaultRecords : "owns records"
    Patients ||--o{ VaultTimeline : "timeline events"
    VaultRecords ||--o{ PatientIdentifiers : "document for ID"
    VaultRecords ||--o{ PatientInsurances  : "document for insurance"

    %% ============ CONSENT ============
    Patients ||--o{ ConsentSessions : "patient grants access"
    Users ||--o{ ConsentSessions : "actor user"
    ConsentSessions ||--o{ AccessLogs : "audit entries"

    %% ============ MEDICATION ============
    Patients ||--o{ Prescriptions : ""
    Doctors ||--o{ Prescriptions : ""
    VaultRecords ||--o{ Prescriptions : ""
    Prescriptions ||--o{ MedicationItems : ""
    MedicationItems ||--o{ MedicationSchedules : ""
    MedicationSchedules ||--o{ MedicationDoses : ""

    %% ============ APPOINTMENTS ============
    Patients ||--o{ Appointments : ""
    Doctors ||--o{ Appointments : ""
    Appointments ||--o{ VisitNotes : ""
    Appointments ||--o{ AiVisitBriefs : ""

    %% ============ DEVICES ============
    Patients ||--o{ DeviceLinks : ""
    DeviceLinks ||--o{ VitalReadings : ""

    %% ============ ENGAGEMENT ============
    Patients ||--o{ Notifications : ""
    Users ||--o{ Notifications : ""
    Patients ||--o{ ChatSessions : ""
    ChatSessions ||--o{ ChatMessages : ""

    %% ============ ENTITY DEFINITIONS ============

    Users {
      UUID Id PK
      UUID TenantId
      string UserName
      string Email
      string PasswordHash
      string UserType
      bool IsActive
      timestamptz CreatedAt
      string PhotoStorageKey
    }

    Patients {
      UUID Id PK
      UUID TenantId
      UUID UserId FK
      string FullName
      date DateOfBirth
      string Gender
      string Salutation
      string Country
      string ResidenceCountry
      string MobileNumber
      string HealthVaultId
      timestamptz CreatedAt
    }

    Doctors {
      UUID Id PK
      UUID TenantId
      UUID UserId FK
      string FullName
      string Salutation
      string Gender
      string Specialty
      string RegistrationNo
      string ClinicName
      timestamptz CreatedAt
    }

    FamilyLinks {
      UUID Id PK
      UUID TenantId
      UUID PatientId FK
      UUID FamilyUserId FK
      string Relationship
      bool IsGuardian
      timestamptz CreatedAt
    }

    PatientIdentifiers {
      UUID Id PK
      UUID TenantId
      UUID PatientId FK
      string IdType
      string IdNumber
      string IssuerCountry
      date IssueDate
      date ExpiryDate
      string Notes
      UUID RecordId FK
      timestamptz CreatedAt
    }

    PatientInsurances {
      UUID Id PK
      UUID TenantId
      UUID PatientId FK
      string InsurerName
      string PolicyNumber
      string MemberId
      string PlanName
      string InsurerCountry
      date IssueDate
      date ExpiryDate
      bool IsActive
      UUID RecordId FK
      timestamptz CreatedAt
    }

    VaultRecords {
      UUID Id PK
      UUID TenantId
      UUID PatientId FK
      string RecordType
      string Title
      text Description
      string FileKey
      string Sensitivity
      string Source
      timestamptz CreatedAt
    }

    VaultTimeline {
      UUID Id PK
      UUID TenantId
      UUID PatientId FK
      string EventType
      UUID RelatedId
      timestamptz EventTime
      string Summary
    }

    ConsentSessions {
      UUID Id PK
      UUID TenantId
      UUID PatientId FK
      UUID ActorUserId FK
      string ActorType
      jsonb ScopeJson
      timestamptz ExpiresAt
      bool IsRevoked
      timestamptz CreatedAt
    }

    AccessLogs {
      UUID Id PK
      UUID TenantId
      UUID ConsentSessionId FK
      timestamptz AccessedAt
      string ResourceType
      UUID ResourceId
      string Action
    }

    Prescriptions {
      UUID Id PK
      UUID TenantId
      UUID PatientId FK
      UUID DoctorId FK
      UUID RecordId FK
      date IssuedOn
      text Notes
      timestamptz CreatedAt
    }

    MedicationItems {
      UUID Id PK
      UUID TenantId
      UUID PrescriptionId FK
      string Name
      string Dosage
      string Frequency
      string Route
      int DurationDays
      text Instructions
    }

    MedicationSchedules {
      UUID Id PK
      UUID TenantId
      UUID MedicationItemId FK
      date StartDate
      date EndDate
      jsonb TimesInDay
      string TimeZone
    }

    MedicationDoses {
      UUID Id PK
      UUID TenantId
      UUID ScheduleId FK
      timestamptz DueAt
      string Status
      timestamptz TakenAt
      text Notes
    }

    Appointments {
      UUID Id PK
      UUID TenantId
      UUID PatientId FK
      UUID DoctorId FK
      timestamptz ScheduledAt
      string Status
      string Reason
      string Location
      timestamptz CreatedAt
    }

    VisitNotes {
      UUID Id PK
      UUID TenantId
      UUID AppointmentId FK
      text NotesByDoctor
      text NotesByPatient
      timestamptz CreatedAt
    }

    AiVisitBriefs {
      UUID Id PK
      UUID TenantId
      UUID AppointmentId FK
      text SummaryForDoctor
      text SummaryForPatient
      timestamptz GeneratedAt
    }

    DeviceLinks {
      UUID Id PK
      UUID TenantId
      UUID PatientId FK
      string Provider
      string ExternalId
      timestamptz LinkedAt
      bool IsActive
    }

    VitalReadings {
      UUID Id PK
      UUID TenantId
      UUID PatientId FK
      UUID DeviceLinkId FK
      string VitalType
      numeric Value
      string Unit
      timestamptz TakenAt
      timestamptz CreatedAt
    }

    Notifications {
      UUID Id PK
      UUID TenantId
      UUID PatientId FK
      UUID UserId FK
      string Channel
      string TemplateKey
      jsonb Payload
      string Status
      timestamptz CreatedAt
      timestamptz SentAt
    }

    ChatSessions {
      UUID Id PK
      UUID TenantId
      UUID PatientId FK
      timestamptz StartedAt
      bool IsActive
    }

    ChatMessages {
      UUID Id PK
      UUID TenantId
      UUID SessionId FK
      string Sender
      text Content
      timestamptz CreatedAt
    }
